[metadata]
name = pysemble
version = 0.0.2
author = Jack Delahunt
author_email = jdealhunt@gmail.com
description = C/C++ build system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jackdelahunt/Peach
project_urls =
    Bug Tracker = https://github.com/jackdelahunt/Peach/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src